tests/test_assets/semantic/invalid/definite_assignment/loop_exits.expected
semantic error at line 6: variable 'value' may be uninitialized
semantic error at line 25: variable 'value' may be uninitialized
2 semantic errors generated.
